--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -1,83 +1,92 @@
-<div class="container">
-    <div class="container-h1">
-        <h1>Centros</h1>
-    </div>
-    <div class="container-search-botton">
-        <button class="button-createUser" style="color: white; font-family: Roboto Md 500;" (click)="create()"> <svg
-                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building"
-                style="margin-left:10px ; margin-right: 10px;" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
-                <path
-                    d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
-            </svg>
-            Agregar usuario
-        </button>
-        <div>
-            <input class="input-search" type="text" (ngModelChange)="busca($event)" [(ngModel)]="Centro">
+<section class="container-axes">
+    <div class="axes">
+        <h1 class="axes__title">Centros</h1>
+        <div class="axes__container-search">
+            <a class="btn-add-axes" (click)="create()" style="cursor: pointer;">
+                <img class="btn-add-axes__ico" src="../../../../../assets/icons/List ol.svg"
+                    alt="Icono de lista ordenada" />
+                <span class="btn-add-axes__text"> AGREGAR CENTROS </span>
+            </a>
+            <label for="searchAxes" class="lbl-search-axes">
+                <input class="lbl-search-axes__input" id="searchAxes" type="text" [(ngModel)]="Centro"
+                    (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
+                <img class="lbl-search-axes__ico" src="../../../../../assets/icons/Search.svg"
+                    alt="Icono de lupa para busqueda" />
+            </label>
         </div>
-        <a matTooltip="Buscar" style="margin-top: 10px;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-search"
-                viewBox="0 0 16 16">
-                <path
-                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-            </svg>
-        </a>
-    </div>
-    <table>
-        <tbody>
-            <mat-card>
-                <thead>
-                    <tr>
-                        <th>Centro</th>
-                        <th>Zona</th>
-                        <th style="text-align: end;">Acciones</th>
-                    </tr>
-                </thead>
-            </mat-card>
-            <mat-card *ngFor="let i of dataSource" class="mat-card-user-data">
-                <td>{{i.nombre}}</td>
-                <td>{{i.zona}}</td>
-                <td style="text-align: end;">
-                    <a class="icon-edit" matTooltip="Editar" (click)="edit(i)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
-                            class="bi bi-pencil" viewBox="0 0 16 16">
-                            <path
-                                d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
-                        </svg>
-                    </a>
-                    <a matTooltip="Borrar" (click)="delete(i)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
-                            class="bi bi-trash" viewBox="0 0 16 16">
-                            <path
-                                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                            <path fill-rule="evenodd"
-                                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                        </svg>
-                    </a>
-                </td>
-            </mat-card>
+        <section class="list-axes">
+            <div class="list-axes__table">
+                <!-- Position Column -->
+                <div class="list-axes__row">
+                    <div class="list-axes__header">Nombre</div>
+                    <div class="list-axes__header">Zona</div>
+                    <div class="list-axes__header list-axes__header--action">
+                        Acciones
+                    </div>
+                </div>
 
-        </tbody>
-    </table>
-    <div *ngIf="data.flag" class="label-userCreate">
-        <div *ngIf="!data.editar">
-            <div class="label">
-                <label>¡El Centro {{data.nombreCentro}} fue creado con éxito! </label>
+                <div class="list-axes__row" *ngFor="let element of dataSource">
+                    <div class="list-axes__cell list-axes__cell--axe">
+                        {{ element.nombre }}
+                    </div>
+                    <div class="list-axes__cell list-axes__cell--axe">
+                        {{ element.zona }}
+                    </div>
+                    <div class="list-axes__cell list-axes__cell--acction">
+                        <a (click)="edit(element)">
+                            <img class="list-axes__ico-action list-axes__ico-action--edit"
+                                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
+                                matTooltip="Editar" />
+                        </a>
+                        <img class="list-axes__ico-action" src="../../../../../assets/icons/Trash.svg"
+                            alt="icono de Eliminar" matTooltip="Borrar" (click)="delete(element)" />
+                    </div>
+                </div>
             </div>
-            <div class="containerButtonClose">
-                <button mat-button class="buttonClose" (click)="close()">close</button>
+        </section>
+    </div>
+    <div *ngIf="data.flag" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Eje {{ data.nombreCentro }} fue creado con éxito!
+            </p>
+        </div>
+    </div>
+    <div *ngIf="data.editar" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Eje {{ data.nombreCentro }} fue editado con éxito!
+            </p>
+        </div>
+    </div>
+    <div *ngIf="data.flagDelete" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container-delete">
+            <p class="modal__text">
+                <span class="modal__text-span">¿</span>Eliminar eje<span class="modal__text-span">?</span>
+            </p>
+            <div class="modal__options">
+                <svg class="modal__ico-option"  alt="icon check" viewBox="0 0 94 120"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M80.9981 27.6532L80.9988 27.6542C81.2333 27.9527 81.4238 28.3134 81.5552 28.7177C81.6866 29.1219 81.7551 29.558 81.7551 30.0004C81.7551 30.4427 81.6866 30.8788 81.5552 31.283C81.4238 31.6874 81.2333 32.048 80.9988 32.3465L80.9984 32.347L39.8734 84.847L39.8731 84.8475C39.6392 85.1468 39.368 85.3758 39.0791 85.5289C38.791 85.6815 38.4884 85.7571 38.1873 85.7571C37.8862 85.7571 37.5837 85.6815 37.2955 85.5289C37.0066 85.3758 36.7354 85.1468 36.5015 84.8475L36.5012 84.847L15.9387 58.597C15.4638 57.9909 15.1836 57.1478 15.1836 56.2504C15.1836 55.3529 15.4638 54.5098 15.9387 53.9037C16.4112 53.3005 17.0223 52.9956 17.6248 52.9956C18.2274 52.9956 18.8384 53.3005 19.3109 53.9037L37.7936 77.5061L38.1873 78.0088L38.5809 77.5062L77.6262 27.6537L77.6265 27.6532C77.8604 27.3539 78.1316 27.1249 78.4205 26.9718L78.1865 26.53L78.4205 26.9718C78.7087 26.8192 79.0112 26.7437 79.3123 26.7437C79.6134 26.7437 79.9159 26.8192 80.2041 26.9718C80.493 27.1249 80.7642 27.3539 80.9981 27.6532Z"
+                        fill="#22502B" stroke="#22502B" />
+                </svg>
+                <svg class="modal__ico-option" (click)="close()" alt="icon check" viewBox="0 0 24 31" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M17.781 8.0329C17.8508 8.12289 17.9062 8.22979 17.944 8.34748C17.9818 8.46518 18.0013 8.59135 18.0013 8.71877C18.0013 8.8462 17.9818 8.97237 17.944 9.09006C17.9062 9.20776 17.8508 9.31466 17.781 9.40465L7.28097 22.9671C7.14014 23.1491 6.94913 23.2512 6.74997 23.2512C6.55081 23.2512 6.3598 23.1491 6.21897 22.9671C6.07814 22.7852 5.99902 22.5385 5.99902 22.2813C5.99902 22.024 6.07814 21.7773 6.21897 21.5954L16.719 8.0329C16.7886 7.94268 16.8714 7.8711 16.9625 7.82227C17.0536 7.77343 17.1513 7.74829 17.25 7.74829C17.3486 7.74829 17.4463 7.77343 17.5374 7.82227C17.6285 7.8711 17.7113 7.94268 17.781 8.0329V8.0329Z"
+                        fill="#22502B" />
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.21936 8.0329C6.14952 8.12289 6.0941 8.22979 6.0563 8.34748C6.01849 8.46518 5.99902 8.59135 5.99902 8.71877C5.99902 8.8462 6.01849 8.97237 6.0563 9.09006C6.0941 9.20776 6.14952 9.31466 6.21936 9.40465L16.7194 22.9671C16.8602 23.1491 17.0512 23.2512 17.2504 23.2512C17.4495 23.2512 17.6405 23.1491 17.7814 22.9671C17.9222 22.7852 18.0013 22.5385 18.0013 22.2813C18.0013 22.024 17.9222 21.7773 17.7814 21.5954L7.28136 8.0329C7.2117 7.94268 7.12893 7.8711 7.03781 7.82227C6.9467 7.77343 6.84902 7.74829 6.75036 7.74829C6.65171 7.74829 6.55403 7.77343 6.46291 7.82227C6.3718 7.8711 6.28903 7.94268 6.21936 8.0329V8.0329Z"
+                        fill="#22502B" />
+                </svg>
             </div>
         </div>
-        <div *ngIf="data.editar">
-            <div class="label">
-                <label>¡El Centro {{data.nombreCentro}} fue modificado con éxito! </label>
-            </div>
-            <div class="containerButtonClose">
-                <button mat-button class="buttonClose" (click)="close()">close</button>
-            </div>
-        </div>
-
-
     </div>
-</div>
+</section>
+
