--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -1,234 +1,370 @@
+
 // @import 'styles/variables.scss';
 // @import 'styles/variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import "../../../../../styles/variables.scss";
 
-
-.container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.container-axes {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-left: 123px;
+  .axes {
+    font-size: 16px;
     width: 100%;
-    margin-top: 59px;
-}
-
-.container-search-botton {
+    max-width: 71.0625em;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 30px;
-    width: 798px;
-    height: 48px;
-}
-
-.container-h1 {
-    margin-left: 230px;
-}
-
-h1 {
-    font-family: 'Futura Bk BT';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-    text-align: center;
-    color: #000000;
-}
-
-.button-createUser {
-    font-family: "Roboto Md 500";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    align-items: center;
-    letter-spacing: 1.25px;
-    text-transform: uppercase;
-    width: 201px;
-    height: 48px;
-    background: #1E1E1E;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.14), 0px 1px 10px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 50px;
-    cursor: pointer;
-    align-items: center;
-    display: flex;
-}
-
-
-.input-search {
-    box-sizing: border-box;
-    width: 513px;
-    height: 45px;
-    background: #FFFFFF;
-    border: 1px solid #A3A3A3;
-    border-radius: 8px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #000000;
-    padding: 10px;
-    outline-color: #007ac196;
-}
-
-table {
-    margin-top: 32px;
-    margin-left: 338px;
-    height: 440px !important;
-    width: 1137px;
-}
-
-
-
-th {
-    height: 19px;
-    width: 300px;
-    align-self: start;
-    text-align: inherit;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 19px;
-    color: #000000;
-}
-
-td {
-    height: 19px;
-    width: 300px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #000000;
-}
-
-.mat-card {
-    height: 48px !important;
-    width: 1050px;
-    border-radius: 0px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-}
-
-.mat-card-user-data {
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-a {
-    cursor: pointer;
-}
-
-.icon-edit {
-    margin-right: 10px;
-}
-
-.label-userCreate {
     justify-content: center;
     align-items: center;
-    padding: 16px 8px 8px 24px;
-    position: absolute;
-    background: #FFFFFF;
-    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.14), 0px 6px 30px rgba(0, 0, 0, 0.12), 0px 8px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 4px
-}
+    flex-direction: column;
+    margin: 0 7.9375em;
+    .axes__title {
+      font-size: 1.875rem;
+      line-height: 1.2em;
+      text-align: center;
+      color: $color-text-primary;
+      margin-top: 2.5em;
+      margin-bottom: 1.166em;
+    }
+    .axes__container-search {
+      display: flex;
+      align-items: center;
+      align-self: flex-start;
+      .btn-add-axes {
+        font-size: 1em;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        width: 12em;
+        height: 3em;
+        background: $color-4;
+        box-shadow: 0em 0.25em 0.3125em rgba(0, 0, 0, 0.14),
+          0em 0.0625em 0.625em rgba(0, 0, 0, 0.12),
+          0em 0.125em 0.25em rgba(0, 0, 0, 0.2);
+        border-radius: 3.125em;
+        .btn-add-axes__ico {
+          width: 1.1875em;
+          margin-left: 0.75em;
+          margin-right: 0.5em;
+        }
+        .btn-add-axes__text {
+          font-family: "Roboto Md 500";
+          font-size: 0.875em;
+          line-height: 1.142em;
+          letter-spacing: 0.0892em;
+          color: $color-white;
+        }
+      }
+      .lbl-search-axes {
+        display: flex;
+        align-items: center;
+        .lbl-search-axes__input {
+          width: 32.0625em;
+          height: 2.8125em;
+          border: 0.0625em solid #979797;
+          border-radius: 0.5em;
+          margin: 0 1.875em;
+          outline-color: $color-primary-border;
+          font-size: 1em;
+          padding: 0 1.25em;
+        }
+        .lbl-search-axes__ico {
+          width: 1.5em;
+        }
+      }
+    }
+    .list-axes {
+      width: 100%;
+      max-width: 71.0625em;
+      .list-axes__table {
+        margin-top: 22px;
+        max-width: 100%;
+        border-collapse: separate;
+        border-spacing: 0px 8px;
+        .list-axes__row {
+          box-shadow: 0 2px 2px #00000040;
+          height: 48px;
+          margin-bottom: 8px;
+          padding-left: 1.5em;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .list-axes__header {
+            text-align: start;
+            font-family: "Inter-700";
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
+          }
+          .list-axes__header--action {
+            width: 153px;
+          }
 
-.label {
-    width: 623px;
-    height: 300px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: 0.25px;
-    color: rgba(0, 0, 0, 0.7);
+          .list-axes__cell--acction {
+            width: 153px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            .list-axes__ico-action {
+              padding: 0.625em 0.625em 0.625em 0;
+              margin-right: 1.0625em;
+              cursor: pointer;
+            }
+            .list-axes__ico-action--edit {
+              margin-top: 4px;
+            }
+          }
+          .list-axes__cell {
+            font-family: "Inter" !important;
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
+          }
+        }
+      }
+    }
+  }
 }
-
-.containerButtonClose {
+.modal {
+  position: absolute;
+  top: 134px;
+  z-index: 200;
+  width: 525px;
+  height: 264px;
+  background-color: #def2d6;
+  border: 1px solid #def2d6;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .modal__btnClose {
+    padding: 21px 12px 18px 25px;
+    width: 61px;
+    height: 70px;
+    align-self: flex-end;
+    cursor: pointer;
+  }
+  .modal__container {
+    width: 474px;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    // margin-top: 18px;
+    .modal__ico {
+      width: 94px;
+      height: 120px;
+    }
+    .modal__text {
+      font-size: 24px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #154520;
+      padding-top: 40px;
+      margin-bottom: 0;
+      margin-left: 15px;
+    }
+  }
+  .modal__container-delete {
+    width: 474px;
+    display: flex;
+    flex-direction: column;
+    .modal__text {
+      font-size: 24px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #154520;
+      padding-top: 15px;
+      margin-bottom: 0;
+      margin-left: 15px;
+      .modal__text-span {
+        font-family: Roboto;
+      }
+    }
+    .modal__options {
+      width: 100%;
+      display: flex;
+      padding: 0 60px;
+      justify-content: space-around;
+      .modal__ico-option {
+        transition: $transition;
+        padding: 30px;
+        width: 110px;
+        border-radius: 4px;
+        cursor: pointer;
+        path {
+          fill: #22502b;
+          transition: $transition;
+        }
+        &:hover {
+          transform: scale(1.15);
+
+          path {
+            fill: #1e1e1e;
+          }
+        }
+      }
+    }
+  }
 }
+::ng-deep .cdk-overlay-container {
+  .mat-snack-bar-container {
+    display: flex;
+    justify-content: center;
 
-.buttonClose {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 1.25px;
-    text-transform: uppercase;
-    color: #007AC1;
-    width: 76px;
-    height: 36px;
-    border-radius: 4px;
+    width: 525px;
+    max-width: 50vw;
+    height: 264px;
+    background-color: #def2d6;
+    .mat-simple-snackbar {
+      height: 169px;
+      width: 485px;
+      // height: 110px;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;
+      align-items: center;
+      .mat-simple-snack-bar-content {
+        font-size: 24px;
+        text-align: center;
+        letter-spacing: 0.25px;
+        color: #154520;
+      }
+      .mat-simple-snackbar-action {
+        font-size: 14px;
+        align-self: flex-end;
+        .mat-button-wrapper {
+          font-family: "Roboto Md 500";
+        }
+      }
+    }
+  }
 }
-
-
-
-
-
 @media (max-width: 1400px) {
-    .container {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
+  .container-axes {
+    justify-content: flex-start;
+    .axes {
+      margin-right: 4.375em;
+      margin-left: 7.9375em;
+      .axes__title {
+        margin-top: 40px;
+        padding-right: 57px; //centra el titulo alineado con el logo del header
+      }
     }
-
-    table {
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        margin-left: 150px;
+  }
+  ::ng-deep .cdk-overlay-container {
+    .mat-snack-bar-container {
+      width: 372px;
+      height: 140px;
+      .mat-simple-snackbar {
+        height: 100px;
+        width: auto;
+        .mat-simple-snack-bar-content {
+          font-size: 25px;
+          line-height: 28px;
+        }
+      }
     }
-
-    .mat-card {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-
-    }
-
+  }
 }
-@media (max-width: 1320px) {
-    .container {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    table {
-        display: flex;
-        
-        justify-content: center;
-        width: 100%;
-        margin-left: 250px;
-    }
-
-    .mat-card {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-
-    }
-    .container-search-botton{
-        margin-left: 200px;
-    }
-
-}
-
 @media (max-width: 768px) {
-    .home {
-        font-size: 10px;
+  .container-axes {
+    .axes {
+      font-size: 0.875em;
+      margin-left: 7em;
+      .axes__title {
+        padding-right: 135.75px;
+      }
     }
+  }
 }
+
+
+// .containerButtonClose {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: flex-end;
+//     align-items: center;
+// }
+
+// .buttonClose {
+//     font-family: 'Roboto';
+//     font-style: normal;
+//     font-weight: 500;
+//     font-size: 14px;
+//     line-height: 16px;
+//     align-items: center;
+//     text-align: center;
+//     letter-spacing: 1.25px;
+//     text-transform: uppercase;
+//     color: #007AC1;
+//     width: 76px;
+//     height: 36px;
+//     border-radius: 4px;
+// }
+
+
+
+
+
+// @media (max-width: 1400px) {
+//     .container {
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         flex-direction: column;
+//     }
+
+//     table {
+//         display: flex;
+//         justify-content: space-evenly;
+//         width: 100%;
+//         margin-left: 150px;
+//     }
+
+//     .mat-card {
+//         width: 100%;
+//         display: flex;
+//         justify-content: space-evenly;
+
+//     }
+
+// }
+// @media (max-width: 1320px) {
+//     .container {
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         flex-direction: column;
+//     }
+
+//     table {
+//         display: flex;
+        
+//         justify-content: center;
+//         width: 100%;
+//         margin-left: 250px;
+//     }
+
+//     .mat-card {
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+
+//     }
+//     .container-search-botton{
+//         margin-left: 200px;
+//     }
+
+// }
+
+// @media (max-width: 768px) {
+//     .home {
+//         font-size: 10px;
+//     }
+// }	
