--- a/src/app/modules/admin/containers/add-axes/add-axes.component.scss
+++ b/src/app/modules/admin/containers/add-axes/add-axes.component.scss
@@ -92,6 +92,37 @@
     }
   }
 }
+.modal-error {
+  position: absolute;
+  bottom: 20vh;
+  z-index: 200;
+  width: 525px;
+  height: 203px;
+  background-color: #cce8f4;
+  border: 1px solid #cce8f4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .modal__container-error {
+    width: 474px;
+    display: flex;
+    align-items: center;
+    .modal__ico-info {
+      width: 88px;
+      height: 90px;
+    }
+    .modal__text {
+      font-size: 24px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #083d5e;
+      margin-bottom: 0;
+      margin-left: 15px;
+    }
+  }
+}
 ::ng-deep .cdk-overlay-container .cdk-overlay-pane {
   margin: 54px 0; //para que el panel de selección aparezca abajo o arriba del input y no sobre él
 }
