Feat: agrega modal de alerta para eje ya existe

--- a/src/app/modules/admin/containers/add-axes/add-axes.component.html
+++ b/src/app/modules/admin/containers/add-axes/add-axes.component.html
@@ -50,4 +50,14 @@
       </p>
     </div>
   </div>
+  <div *ngIf="flagExist" class="modal-error">
+    <div class="modal__container-error">
+      <img
+        class="modal__ico-info"
+        src="../../../../../assets/icons/Info-circle.svg"
+        alt="Icono de información"
+      />
+      <p class="modal__text">El eje ya existe en el sistema</p>
+    </div>
+  </div>
 </section>
