--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -206,16 +206,18 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-left: 44px;
-    padding-right: 17px;
+    padding-left: 95px;
+    padding-right: 29px;
     .btn-modal__cancel {
       width: 168px;
-      height: 70px;
+      height: 59px;
       background: #e2d9a4;
       color: #083d5e;
       border: 1px solid #083d5e;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
       font-size: 20px;
+      transition: $transition;
       cursor: pointer;
       &:hover {
         background: #f1efe0;
@@ -223,12 +225,15 @@
     }
     .btn-modal__accept {
       width: 168px;
-      height: 70px;
+      height: 59px;
       color: #e60d0d;
       background: #e2d9a4;
       border: 1px solid #c70f0f;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
-      font-size: 20px;
+      font-size: 16px;
+      padding: 0 20px;
+      transition: $transition;
       cursor: pointer;
       &:hover {
         background: #f1efe0;
