--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -1,81 +1,80 @@
-<div class="container">
-    <div class="container-h1">
-        <h1>Director de centro</h1>
-    </div>
-    <div class="container-search-botton">
-            <button class="button-createUser" style="color: white; font-family: Roboto Md 500;" (click)="create()"> <svg
-                xmlns="http://www.w3.org/2000/svg" width="18" height="19.09" fill="currentColor"
-                style="margin-left:10px ; margin-right: 10px;"
-                class="bi bi-person-plus-fill" viewBox="0 0 16 16">
-                <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                <path fill-rule="evenodd"
-                    d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
-            </svg>
-            Agregar usuario
-        </button>
-        <div>
-            <input class="input-search" type="text"  (ngModelChange)="busca($event)"
-            [(ngModel)]="usuario">
+<section class="container-user">
+    <div class="user">
+        <h1 class="user__title">Usuarios</h1>
+        <div class="user__container-search">
+            <a class="btn-add-user" (click)="create()">
+                <img class="btn-add-user__ico" src="../../../../../assets/icons/List ol.svg"
+                    alt="Icono de lista ordenada" />
+                <span class="btn-add-user__text"> AGREGAR USUARIO </span>
+            </a>
+            <label for="searchAxes" class="lbl-search-user">
+                <input class="lbl-search-user__input" id="searchAxes" type="text" [(ngModel)]="usuario"
+                    (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
+                <img class="lbl-search-user__ico" src="../../../../../assets/icons/Search.svg"
+                    alt="Icono de lupa para busqueda" />
+            </label>
         </div>
-        <a matTooltip="Buscar" style="margin-top: 10px;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-search"
-                viewBox="0 0 16 16">
-                <path
-                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-            </svg>
-        </a>
-    </div>
-    <table>
-        <tbody>
-            <mat-card>
-                <thead>
-                    <tr>
-                        <th>Usuario</th>
-                        <th>Centro asignado</th>
-                        <th style="text-align: end;">Acciones</th>
-                    </tr>
-                </thead>
-            </mat-card>
-            <mat-card *ngFor="let i of user" class="mat-card-user-data">
-                <td>{{i.nombre}}</td>
-                <td>{{centroAsignado(i)}}</td>
-                <td style="text-align: end;">
-                    <a class="icon-edit" matTooltip="Editar" (click)="edit(i)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
-                            class="bi bi-pencil" viewBox="0 0 16 16">
-                            <path
-                                d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
-                        </svg>
-                    </a>
-                    <a matTooltip="Borrar" (click)="delete(i)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
-                            class="bi bi-trash" viewBox="0 0 16 16">
-                            <path
-                                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                            <path fill-rule="evenodd"
-                                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                        </svg>
-                    </a>
-                </td>
-            </mat-card>
+        <section class="list-user">
+            <div class="list-user__table">
+                <!-- Position Column -->
+                <div class="list-user__row">
+                    <div class="list-user__header">Usuario</div>
+                    <div class="list-user__header list-user__header--action">
+                        Acciones
+                    </div>
+                </div>
 
-        </tbody>
-    </table>
-    <div *ngIf="data.flag" class="label-userCreate">
-        <div *ngIf="!data.editar">
-            <div class="label">
-                <label>¡El usuario {{data.nombreUsuario}} fue creado con éxito! </label>
+                <div class="list-user__row" *ngFor="let element of user ">
+                    <div class="list-user__cell list-user__cell--user">
+                        {{ element.nombre }}
+                    </div>
+                    <div class="list-user__cell list-user__cell--acction">
+                        <a (click)="edit(element)">
+                            <img class="list-user__ico-action list-user__ico-action--edit"
+                                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
+                                matTooltip="Editar" />
+                        </a>
+                        <img class="list-user__ico-action" src="../../../../../assets/icons/Trash.svg"
+                            alt="icono de Eliminar" matTooltip="Borrar" (click)="onClickDelete(element.id)" />
+                    </div>
+                </div>
             </div>
-            <div class="containerButtonClose">
-                <button mat-button class="buttonClose" (click)="close()">close</button>
-            </div>
+        </section>
+    </div>
+
+    <div *ngIf="flagNew" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Usuario {{ data.nombreUsuario }} fue creado con éxito!
+            </p>
         </div>
-        <div *ngIf="data.editar">
-            <div class="label">
-                <label>¡El usuario {{data.nombreUsuario}} fue modificado con éxito! </label>
-            </div>
-            <div class="containerButtonClose">
-                <button mat-button class="buttonClose" (click)="close()">close</button>
-            </div>
+    </div>
+
+    <div *ngIf="flagEdited" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Usuario {{ data.nombreUsuario}} fue editado con éxito!
+            </p>
         </div>
-</div>
+    </div>
+
+    <div *ngIf="flagDelete" class="modal-delete">
+        <div class="modal__container-delete">
+            <img class="modal__ico-info" src="../../../../../assets/icons/Info-circle.svg" alt="Icono de información" />
+            <p class="modal__text">
+                ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
+                revertida
+            </p>
+        </div>
+        <div class="modal__options">
+            <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
+            <button class="btn-modal__accept" (click)="deleteUser()">
+                Confirmar y eliminar
+            </button>
+        </div>
+    </div>
+</section>
