Refactor: agrega llamada al metodo elim y cambia de lugar el delete

--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -39,7 +39,7 @@
                                 matTooltip="Editar" />
                         </a>
                         <img class="list-center__ico-action" src="../../../../../assets/icons/Trash.svg"
-                            alt="icono de Eliminar" matTooltip="Borrar" (click)="delete(element)" />
+                            alt="icono de Eliminar" matTooltip="Borrar" (click)="elim(element)" />
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <span class="modal__text-span">¿</span>Eliminar centro<span class="modal__text-span">?</span>
             </p>
             <div class="modal__options">
-                <svg class="modal__ico-option"  alt="icon check" viewBox="0 0 94 120"
+                <svg (click)="delete()" class="modal__ico-option"  alt="icon check" viewBox="0 0 94 120"
                     fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M80.9981 27.6532L80.9988 27.6542C81.2333 27.9527 81.4238 28.3134 81.5552 28.7177C81.6866 29.1219 81.7551 29.558 81.7551 30.0004C81.7551 30.4427 81.6866 30.8788 81.5552 31.283C81.4238 31.6874 81.2333 32.048 80.9988 32.3465L80.9984 32.347L39.8734 84.847L39.8731 84.8475C39.6392 85.1468 39.368 85.3758 39.0791 85.5289C38.791 85.6815 38.4884 85.7571 38.1873 85.7571C37.8862 85.7571 37.5837 85.6815 37.2955 85.5289C37.0066 85.3758 36.7354 85.1468 36.5015 84.8475L36.5012 84.847L15.9387 58.597C15.4638 57.9909 15.1836 57.1478 15.1836 56.2504C15.1836 55.3529 15.4638 54.5098 15.9387 53.9037C16.4112 53.3005 17.0223 52.9956 17.6248 52.9956C18.2274 52.9956 18.8384 53.3005 19.3109 53.9037L37.7936 77.5061L38.1873 78.0088L38.5809 77.5062L77.6262 27.6537L77.6265 27.6532C77.8604 27.3539 78.1316 27.1249 78.4205 26.9718L78.1865 26.53L78.4205 26.9718C78.7087 26.8192 79.0112 26.7437 79.3123 26.7437C79.6134 26.7437 79.9159 26.8192 80.2041 26.9718C80.493 27.1249 80.7642 27.3539 80.9981 27.6532Z"
