--- a/src/app/modules/admin/containers/am-user/am-user.component.scss
+++ b/src/app/modules/admin/containers/am-user/am-user.component.scss
@@ -8,7 +8,15 @@
     margin-top: 59px;
 }
 
+h1 {
+    font-family: 'Futura Bk BT';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 43px;
 
+    color: #000000;
+}
 
 form {
     display: flex;
