Refactor: cambia edit y agrega funcion busca centro
Esto permite chequear si el centro tiene usuario asignado, en caso contrario manda un user vacio

--- a/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.html
+++ b/src/app/modules/admin/containers/add-mod-center/add-mod-center.component.html
@@ -16,7 +16,7 @@
             </mat-error>
         </section>
         <label class="labelDato">*Dato obligatorio</label>
-        <button [disabled]="formUpEdit.invalid" mat-button *ngIf="data.editar" (click)="editar()">Confirmar</button>
+        <button [disabled]="formUpEdit.invalid" mat-button *ngIf="data.editar" (click)="editar(formUpEdit.value)">Confirmar</button>
         <button [disabled]="formUpEdit.invalid" mat-button *ngIf="!data.editar" (click)="confirm()">Confirmar</button>
     </form>
 </div>
