Refactor: este cambio permite mostrar el dato correctamente

--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -50,7 +50,7 @@
         <div class="modal__container">
             <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
             <p class="modal__text">
-                ¡El Eje {{ data.nombreCentro }} fue creado con éxito!
+                ¡El Eje {{ data.center?.nombre }} fue creado con éxito!
             </p>
         </div>
     </div>
@@ -60,7 +60,7 @@
         <div class="modal__container">
             <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
             <p class="modal__text">
-                ¡El Eje {{ data.nombreCentro }} fue editado con éxito!
+                ¡El Eje {{  data.center?.nombre }} fue editado con éxito!
             </p>
         </div>
     </div>
